# tagsdb

./: README.md  available_tags.txt  custom-logback.xml  docker-compose.yml  extract_tags.sh  monitor_tag.sh  monitor_tag_changes.py  monitor_tag_changes.sh  publish_tag.py  run_uns_system.sh  tags_database.json  update_tag.sh
uns_cli/: Cargo.toml  Dockerfile  MQTT_MONITOR_README.md  README.md  convert_timestamp.py  extract_tags.sh  keep_alive.sh  monitor_tag.sh  monitor_tag_changes.py  mqtt_monitor.py  publish_tag.py  run_uns_system.sh  tags.json  update_tag.sh
uns_cli/src/: lib.rs  main.rs
uns_cli/src/application/: commands.rs  mod.rs  tag_service_impl.rs
uns_cli/src/domain/: mod.rs  tag.rs  tag_repository.rs  tag_service.rs
uns_cli/src/infrastructure/: error.rs  mod.rs
uns_cli/src/infrastructure/mqtt/: client.rs  mod.rs  publisher.rs
uns_cli/src/infrastructure/repositories/: json_tag_repository.rs  mod.rs
uns_cli/src/presentation/: cli.rs  mod.rs
uns_cli/tests/: integration_tests.rs  test_tags.json
