[package]
name = "uns_cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "UNS CLI - A command-line interface for managing tags"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uns_cli"
path = "src/lib.rs"

[[bin]]
name = "uns_cli"
path = "src/main.rs"

[dependencies]
# Command-line interface
clap = { version = "4.0", features = ["derive"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MQTT client
rumqttc = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing
mockall = "0.11"
tempfile = "3.3"
